<resources>
    <string name="app_name">Minha Calculadora</string>
    <string name="btn0">0</string>
    <string name="btn1">1</string>
    <string name="btn2">2</string>
    <string name="btn3">3</string>
    <string name="btn4">4</string>
    <string name="btn5">5</string>
    <string name="btn6">6</string>
    <string name="btn7">7</string>
    <string name="btn8">8</string>
    <string name="btn9">9</string>
    <string name="virgula">.</string>
    <string name="igual">=</string>
    <string name="multiplicacao">*</string>
    <string name="divisao">/</string>
    <string name="soma">+</string>
    <string name="subtracao">-</string>
</resources>